--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -278,7 +278,7 @@ div.alert-message {
             img {height:24px; max-width:24px}
           }
           .leaf_menu_wrapper {
-            display:none; position:absolute; width:120px; top:52px; left:-32px; background:url(/assets/arrow_tip.png) no-repeat 49px 0; padding-top:5px;
+            display:none; position:absolute; width:120px; top:52px; left:-32px; z-index:300; background:url(/assets/arrow_tip.png) no-repeat 49px 0; padding-top:5px;
             .leaf_menu {            
               text-align:left; border-radius:5px; background:#fff; box-shadow:0px 5px 5px -1px #777; z-index:200; border:3px solid #333;
               a { 
